strings added in string file. 2nd screen of game store designed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="more">More</string>
     <string name="streaming">Streaming now</string>
     <string name="heading_download_game"></string>
+    <string name="rating">4.5</string>
 </resources>
